--- a/about.html
+++ b/about.html
@@ -153,15 +153,16 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>7464864350</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>Oyesjobs@gmail.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://twitter.com/oyesjobs?t=4qx0djWrbM_GEdIBxe5XOg&s=08"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100092428351801&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/oh-yes-jobs-0abb79273"><i class="fab fa-linkedin-in"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Newsletter</h5>
-                        <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                        <p>We are excited to announce the opening of our new job consultancy, TalentIQ Consulting. Our team is passionate about helping individuals find their dream careers by providing top-notch job search assistance, resume building, interview coaching, career counseling, and skill development services. We believe that our job consultancy stands out from others in the market because of our personalized approach and commitment to our clients' success.
+                          Our services are designed to help clients achieve their career goals by providing them with the necessary tools and resources to succeed..</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                             <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
