--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <iframe class="position-relative rounded w-100 h-100"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d140077.00633683617!2d77.02663872991801!3d28.459497520581497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d192f6d4168af%3A0x6adbf9e2b8a3b017!2sGurugram%2C%20Haryana%2C%20India!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d140082.65674620223!2d76.9431044!3d28.4569355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d17528dbe81fb%3A0xfa0bfb747dba29d2!2sPareena%20Laxmi%20Apartment!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd
 "
                             frameborder="0" style="min-height: 400px; border:0;" allowfullscreen="" aria-hidden="false"
                             tabindex="0"></iframe>
