--- a/job-detail.html
+++ b/job-detail.html
@@ -114,14 +114,14 @@
                             <h4 class="mb-3">Responsibility</h4>
                             <p>Magna et elitr diam sed lorem. Diam diam stet erat no est est. Accusam sed lorem stet voluptua sit sit at stet consetetur, takimata at diam kasd gubergren elitr dolor</p>
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Dolor justo tempor duo ipsum accusam</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Elitr stet dolor vero clita labore gubergren</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Rebum vero dolores dolores elitr</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Est voluptua et sanctus at sanctus erat</li>
-                                <li><i class="fa fa-angle-right text-primary me-2"></i>Diam diam stet erat no est est</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Payroll: On company payroll</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Achieve sales targets in terms of value and volume.</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Provide satisfactory product information to customers.</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Deliver effective customer service.</li>
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>Resolve customer issues and complaints efficiently</li>
                             </ul>
                             <h4 class="mb-3">Qualifications</h4>
-                            <p>Magna et elitr diam sed lorem. Diam diam stet erat no est est. Accusam sed lorem stet voluptua sit sit at stet consetetur, takimata at diam kasd gubergren elitr dolor</p>
+                            <p>Graduate in any discipline (resources with more than 4 years of experience without graduation may be considered and age should be 21-30 years</p>
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-angle-right text-primary me-2"></i>Dolor justo tempor duo ipsum accusam</li>
                                 <li><i class="fa fa-angle-right text-primary me-2"></i>Elitr stet dolor vero clita labore gubergren</li>
