--- a/job-detail.html
+++ b/job-detail.html
@@ -112,7 +112,7 @@
                             <h4 class="mb-3">Job description</h4>
                             <p>Dolor justo tempor duo ipsum accusam rebum gubergren erat. Elitr stet dolor vero clita labore gubergren. Kasd sed ipsum elitr clita rebum ut sea diam tempor. Sadipscing nonumy vero labore invidunt dolor sed, eirmod dolore amet aliquyam consetetur lorem, amet elitr clita et sed consetetur dolore accusam. Vero kasd nonumy justo rebum stet. Ipsum amet sed lorem sea magna. Rebum vero dolores dolores elitr vero dolores magna, stet sea sadipscing stet et. Est voluptua et sanctus at sanctus erat vero sed sed, amet duo no diam clita rebum duo, accusam tempor takimata clita stet nonumy rebum est invidunt stet, dolor.</p>
                             <h4 class="mb-3">Responsibility</h4>
-                            <p>Magna et elitr diam sed lorem. Diam diam stet erat no est est. Accusam sed lorem stet voluptua sit sit at stet consetetur, takimata at diam kasd gubergren elitr dolor</p>
+                            <p>Attend to walk-ins at branches and visit clients at their location and Fulfill sales requirements, including pre- and post-sanction sales activities</p>
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-angle-right text-primary me-2"></i>Payroll: On company payroll</li>
                                 <li><i class="fa fa-angle-right text-primary me-2"></i>Achieve sales targets in terms of value and volume.</li>
